Quorum3/Library/Tests/Inheritance/Pass/OutputParentValueField.quorum
class Main 
    Test1 t
    action Main
        output t:x
        output t:parent:Test2:y
    end
end