Quorum3/Library/Tests/Inheritance/Fail/UsePrivateVariable.quorum
class Main 
    action Main
        Test2 test2
        integer x = test2:y
    end
end